workloads/bar/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bar-service
  namespace: demo-services
spec:
  selector:
    app: bar-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
