workloads/bar/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bar-service-ingress
  namespace: demo-services
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /bar
            pathType: Prefix
            backend:
              service:
                name: bar-service
                port:
                  number: 80
